# obaidy

./: README.md
freesurface/: .cproject  .project  Makefile.am  NEWS  README  configure.ac
freesurface/exampleProgram/: Makefile.am  exampleProgram.c
freesurface/include/: Makefile.am  libFreeSurface.h
freesurface/libFreeSurface/: Makefile.am  libFreeSurface.c
open_channel/: .autotools  .cproject  .gitignore  .project  Makefile.am  NEWS  README  configure.ac
open_channel/TestProgram/: Channel.h  Channel_test.cpp
open_channel/exampleProgram/: .gitignore  Makefile.am  exampleProgram.c  exampleProgram.cpp
open_channel/exampleProgram/.deps/: exampleProgram-exampleProgram.Po
open_channel/exampleProgram/.libs/: exampleProgram
open_channel/include/: Channel.h  Makefile.am  RectChannel.h  RectChannel_test.cpp  TrapChannel.h  TrapChannel_test.cpp  libOpenChannel.h
open_channel/libOpenChannel/: Channel.cpp  Makefile.am  RectChannel.cpp  TrapChannel.cpp  libOpenChannel.c
open_channel/libOpenChannel/.deps/: libOpenChannel_la-Channel.Plo  libOpenChannel_la-RectChannel.Plo  libOpenChannel_la-libOpenChannel.Plo
open_channel/libOpenChannel/.libs/: libOpenChannel.so.0  libOpenChannel.so.0.0.0
pipeflow/: .cproject  .project  AUTHORS  Makefile.am  NEWS  README  configure.ac
pipeflow/exampleProgram/: Makefile.am  exampleProgram.c
pipeflow/include/: Makefile.am  libPipeFlow.h
pipeflow/libPipeFlow/: Makefile.am  libPipeFlow.c
