#######################################
# The list of libraries we are building seperated by spaces.
# The 'lib_' indicates that these build products will be installed
# in the $(libdir) directory. For example /usr/lib
lib_LTLIBRARIES = libOpenChannel.la

#######################################
# Build information for each library

# Sources for libOpenChannel
libOpenChannel_la_SOURCES = libOpenChannel.c

# Linker options libTestProgram
libOpenChannel_la_LDFLAGS = 

# Compiler options. Here we are adding the include directory
# to be searched for headers included in the source code.
libOpenChannel_la_CPPFLAGS = -I$(top_srcdir)/include

