#######################################
# The list of libraries we are building seperated by spaces.
# The 'lib_' indicates that these build products will be installed
# in the $(libdir) directory. For example /usr/lib
lib_LTLIBRARIES = libPipeFlow.la

#######################################
# Build information for each library

# Sources for libPipeFlow
libPipeFlow_la_SOURCES = libPipeFlow.c

# Linker options libTestProgram
libPipeFlow_la_LDFLAGS = 

# Compiler options. Here we are adding the include directory
# to be searched for headers included in the source code.
libPipeFlow_la_CPPFLAGS = -I$(top_srcdir)/include

